bubble-animation/application-mainfest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yesid-animation
  name: yesid-animation
  namespace: animation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yesid-animation
  strategy: {}
  template:
    metadata:
      labels:
        app: yesid-animation
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: yesid-animation
