bubble-animation/application-mainfest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: yesid-animation
  name: yesid-animation
  namespace: animation
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: yesid-animation
    weight: 100
